# hpc-client-1

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  contributing.md  fw_hpc_client-2.0.0rc2-py3-none-any.whl  pyproject.toml  pytest.ini  readme.md
.github/: build-binary.sh  check-formatting.sh  python-prep.sh
code/: Pipfile
code/util/: defn.py
doc/: 2-tracking-changes-privately.md  3-cluster-install.md  4-development-guide.md  faq_updating_flywheel_engine.md  faq_updating_hpc_client.md  faq_use_gpu_on_slurm_cluster.md  installing_flywheel_engine.md  release_notes.md  singularity_remote_endpoint.md
examples/settings/: cast.yml  gpu_cast.yml  start-cast.sh
process/: check-syntax.sh
src/: Pipfile
src/cluster/: __init__.py  base.py  common.py  lsf.py  sge.py  slurm.py
src/util/: defn.py  net.py
src_code/: Pipfile
src_code/cluster/: __init__.py  base.py  common.py  lsf.py  sge.py  slurm.py
src_code/util/: defn.py
tests/: test_base.py
tests/assets/: cast.yml  job_sample.py  variables.py
tests/cluster/: test_base.py  test_common.py  test_slurm.py
tests/util/: test_defn.py  test_net.py
